<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>config_test</groupId>
  <artifactId>config_test</artifactId>
  <version>1.0</version>
  <packaging>jar</packaging>

  <name>config_test</name>
  <url>http://vespa.ai/</url>

  <properties>
    <test.hide>true</test.hide>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <vespa.version>7-SNAPSHOT</vespa.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.yahoo.vespa</groupId>
      <artifactId>config</artifactId>
      <version>${vespa.version}</version>
    </dependency>
    <dependency>
      <groupId>com.yahoo.vespa</groupId>
      <artifactId>configserver</artifactId>
      <version>${vespa.version}</version>
    </dependency>
    <dependency>
      <groupId>com.yahoo.vespa</groupId>
      <artifactId>config-model</artifactId>
      <version>${vespa.version}</version>
    </dependency>
    <dependency>
      <groupId>com.yahoo.vespa</groupId>
      <artifactId>config-model-api</artifactId>
      <version>${vespa.version}</version>
    </dependency>
    <dependency>
      <groupId>com.yahoo.vespa</groupId>
      <artifactId>config-provisioning</artifactId>
      <version>${vespa.version}</version>
    </dependency>
    <dependency>
      <groupId>com.yahoo.vespa</groupId>
      <artifactId>container-dev</artifactId>
      <version>${vespa.version}</version>
    </dependency>
    <dependency>
      <groupId>com.yahoo.vespa</groupId>
      <artifactId>zkfacade</artifactId>
      <version>${vespa.version}</version>
    </dependency>
    <dependency>
      <groupId>com.yahoo.vespa</groupId>
      <artifactId>flags</artifactId>
      <version>${vespa.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>11</source>
          <target>11</target>
          <encoding>utf-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.16</version>
        <configuration>
          <redirectTestOutputToFile>${test.hide}</redirectTestOutputToFile>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <mainClass>com.yahoo.vespa.config.testutil.ConfigServerRunner</mainClass>
            </manifest>
          </archive>
          <finalName>${project.artifactId}</finalName>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.yahoo.vespa</groupId>
        <artifactId>config-class-plugin</artifactId>
        <version>${vespa.version}</version>
        <configuration>
          <defFilesDirectories>configs/def-files</defFilesDirectories>
          <requireNamespace>false</requireNamespace>
        </configuration>
        <executions>
          <execution>
            <id>config-gen</id>
            <goals>
              <goal>config-gen</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
